--- a/app/src/main/res/layout/fragment_security_amenities.xml
+++ b/app/src/main/res/layout/fragment_security_amenities.xml
@@ -271,7 +271,7 @@
                         android:layout_marginVertical="10dp"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="@string/upload_photo"
+                        android:text="@string/upload_photos"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -360,7 +360,7 @@
                         android:layout_marginVertical="10dp"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="@string/upload_photo"
+                        android:text="@string/upload_photos"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
