--- a/app/src/main/res/layout/fragment_sleeping_amenities.xml
+++ b/app/src/main/res/layout/fragment_sleeping_amenities.xml
@@ -89,6 +89,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/_10sdp"
+                        android:tag="1"
                         android:text="@string/_1_2" />
 
                     <RadioButton
@@ -96,6 +97,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/_10sdp"
+                        android:tag="2"
                         android:text="@string/_2_5" />
 
                     <RadioButton
@@ -103,6 +105,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/_10sdp"
+                        android:tag="3"
                         android:text="@string/above_5" />
 
                 </RadioGroup>
@@ -110,14 +113,14 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:background="@color/grey_light"
+                android:layout_height="@dimen/_130sdp"
                 android:visibility="@{rbBedCharpaiYes.checked ? View.VISIBLE : View.GONE}">
 
                 <LinearLayout
                     android:id="@+id/llSleepingAmanPhoto"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/grey_light"
+                    android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:padding="20dp">
@@ -143,6 +146,8 @@
                     android:id="@+id/ivSleepingImg"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:background="@color/grey_light"
                     android:scaleType="fitCenter" />
 
             </FrameLayout>
@@ -310,20 +315,20 @@
                     android:textSize="@dimen/_14ssp" />
 
                 <RadioGroup
-                    android:id="@+id/rgHotWater"
+                    android:id="@+id/rgHotColdWater"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <RadioButton
-                        android:id="@+id/rbWaterYes"
+                        android:id="@+id/rbHotWaterYes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/_10sdp"
                         android:text="@string/yes" />
 
                     <RadioButton
-                        android:id="@+id/rbWaterNo"
+                        android:id="@+id/rbHotWaterNo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/_10sdp"
